# duckdb-annsearch

./: .gitignore  CMakeLists.txt  FIXES.md  Makefile  README.md  devenv.nix  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
bench/: metal_diskann_bench.sql  metal_distance_bench.mm  metal_distance_bench_v2.mm
faiss-metal/: CMakeLists.txt  REVIEW.md
faiss-metal/include/faiss-metal/: MetalDeviceCapabilities.h  MetalIndexFlat.h  MetalIndexIVFFlat.h  MetalResources.h  StandardMetalResources.h  faiss_metal.h
faiss-metal/shaders/: DiskannDistanceParams.h  GemmParams.h  block_select.metal  diskann_distance.metal  fused_l2_topk.metal  simdgroup_gemm.metal  warp_select.metal
faiss-metal/src/: MetalContext.h  MetalContext.mm  MetalDeviceCapabilities.mm  MetalDistance.h  MetalDistance.mm  MetalIndexFlat.mm  MetalIndexIVFFlat.mm  MetalL2Norm.h  MetalL2Norm.mm  MetalSelect.h  MetalSelect.mm  MetalTensor.h  StandardMetalResources.mm
faiss-metal/tests/: bench_metal_flat.mm  test_metal_distance.mm  test_metal_flat.mm  test_metal_ivfflat.mm
rust_lib/: Cargo.toml
rust_lib/diskann-patch/: .cargo_vcs_info.json  Cargo.toml
rust_lib/diskann-patch/src/neighbor/: queue.rs
rust_lib/src/: disk_provider.rs  distance.rs  ffi.rs  index_manager.rs  lib.rs  metal_ffi.rs  provider.rs  streaming_build.rs
src/: ann_extension.cpp  ann_list.cpp  ann_optimizer.cpp  ann_search.cpp  annsearch_extension.cpp  annsearch_list.cpp  diskann_functions.cpp  diskann_index.cpp  faiss_fn_gpu.cpp  faiss_index.cpp  gpu_backend_metal.mm  metal_diskann_bridge.mm  metal_diskann_stub.cpp  rust_ffi.cpp
src/include/: ann_extension.hpp  diskann_index.hpp  faiss_index.hpp  faiss_wrapper.hpp  linked_block_storage.hpp  metal_diskann_bridge.h  rust_ffi.hpp
test/sql/: ann_list.test  ann_search_table.test  diskann_advanced.test  diskann_basic.test  diskann_bound_index.test  diskann_delete.test  diskann_index.test  diskann_metric_ip.test  diskann_optimizer.test  diskann_persist.test  diskann_quantization.test  diskann_sq8_persist.test  diskann_streaming.test  edge_cases.test  faiss_basic.test  faiss_bind_after_restart.test  faiss_gpu.test  faiss_ivfflat.test  faiss_optimizer.test  faiss_persist.test  streaming_build.test
